tests/errors/from_json_invalid_enum.dang
enum Status { PASSED FAILED }

type Child {
  name: String!
  outcome: Status!
}

type Summary {
  children: [Child!]!
}

let summary: Summary! = fromJSON("""
{
  "children": [
    {"name": "one", "outcome": "Skipped"}
  ]
}
""")
